--- a/package.json
+++ b/package.json
@@ -1,51 +1,51 @@
 {
-	"name": "short-star",
-	"type": "module",
-	"version": "0.0.1",
-	"scripts": {
-		"dev": "astro dev",
-		"start": "astro dev",
-		"build": "astro check && astro build",
-		"preview": "astro preview",
-		"astro": "astro"
-	},
-	"dependencies": {
-		"@astro-community/astro-embed-youtube": "^0.5.2",
-		"@astrojs/rss": "4.0.1",
-		"@astrojs/vercel": "^7.6.0",
-		"@sentry/astro": "^8.5.0",
-		"@vercel/analytics": "^1.3.1",
-		"astro": "4.0.8",
-		"astro-embed": "^0.7.2",
-		"astro-font": "^0.0.72",
-		"posthog-js": "^1.136.0"
-	},
-	"devDependencies": {
-		"@astrojs/mdx": "2.0.3",
-		"@astrojs/sitemap": "3.0.4",
-		"@astrojs/tailwind": "5.1.0",
-		"@pagefind/default-ui": "^1.0.4",
-		"@tailwindcss/typography": "0.5.10",
-		"@tinacms/cli": "^1.5.30",
-		"@types/node": "^22.7.7",
-		"@typescript-eslint/parser": "^6.16.0",
-		"clsx": "2.0.0",
-		"eslint": "^8.56.0",
-		"eslint-plugin-astro": "^0.31.0",
-		"eslint-plugin-jsx-a11y": "^6.8.0",
-		"husky": "^8.0.3",
-		"lint-staged": "^15.2.0",
-		"mdast-util-to-string": "^4.0.0",
-		"motion": "^10.16.4",
-		"pagefind": "^1.0.3",
-		"prettier": "^3.0.3",
-		"prettier-config-standard": "^7.0.0",
-		"prettier-plugin-astro": "^0.12.0",
-		"reading-time": "^1.5.0",
-		"slugify": "^1.6.6",
-		"tailwind-merge": "2.0.0",
-		"tailwindcss": "3.3.5",
-		"tinacms": "^1.5.21",
-		"typescript": "^5.2.2"
-	}
+  "name": "short-star",
+  "type": "module",
+  "version": "0.0.1",
+  "scripts": {
+    "dev": "astro dev",
+    "start": "astro dev",
+    "build": "astro check && astro build",
+    "preview": "astro preview",
+    "astro": "astro"
+  },
+  "dependencies": {
+    "@astro-community/astro-embed-youtube": "^0.5.5",
+    "@astrojs/check": "^0.9.4",
+    "@astrojs/mdx": "^3.1.8",
+    "@astrojs/rss": "4.0.1",
+    "@astrojs/vercel": "^7.8.2",
+    "@sentry/astro": "^8.35.0",
+    "@vercel/analytics": "^1.3.1",
+    "astro": "4.16.6",
+    "astro-embed": "^0.7.4",
+    "astro-font": "^0.0.72",
+    "posthog-js": "^1.174.2"
+  },
+  "devDependencies": {
+    "@astrojs/sitemap": "3.0.4",
+    "@astrojs/tailwind": "5.1.0",
+    "@pagefind/default-ui": "^1.1.1",
+    "@tailwindcss/typography": "0.5.10",
+    "@tinacms/cli": "^1.6.10",
+    "@types/node": "^22.7.8",
+    "@typescript-eslint/parser": "^6.21.0",
+    "clsx": "2.0.0",
+    "eslint-plugin-astro": "^0.31.4",
+    "eslint-plugin-jsx-a11y": "^6.10.1",
+    "husky": "^8.0.3",
+    "lint-staged": "^15.2.10",
+    "mdast-util-to-string": "^4.0.0",
+    "motion": "^10.18.0",
+    "pagefind": "^1.1.1",
+    "prettier": "^3.3.3",
+    "prettier-config-standard": "^7.0.0",
+    "prettier-plugin-astro": "^0.12.3",
+    "reading-time": "^1.5.0",
+    "slugify": "^1.6.6",
+    "tailwind-merge": "2.0.0",
+    "tailwindcss": "3.3.5",
+    "tinacms": "^1.6.7",
+    "typescript": "^5.6.3"
+  }
 }
